syntax = "proto3";

package grpc;

option java_multiple_files = true;
option java_package = "bdcc.grpc";
option java_outer_classname = "NodeOperationsProto";

service NodeOperations {
    // Notify node
    rpc notifyNode (NodeInfo) returns (NodeInfo) {}
    // Find Node
    rpc findNode(NodeInfo) returns (stream NodeInfo) {}
    // Initial node lookup
    rpc lookupNode(NodeInfo) returns (stream NodeInfo) {}
    // Find if node has value
    rpc findValue(NodeInfo) returns (stream NodeInfo) {}

    rpc makeTransaction(TransactionInfo) returns (NodeResponse) {}

}
  

 // Return with addresses and node info
message NodeInfo {
  string user_id = 1;
  string user_address = 2;
}


message TransactionInfo {
  string buyer_id = 1;
  double amount = 2;
  string seller_id = 3;
}

message NodeResponse{
  string status = 1;
}